2009-02-18  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Relocate GDC support to experimental development branch; phase 2.

	* x86-mingw32-build.sh: Revert GDC specific changes from 2008-01-13.
	* x86-mingw32-build.sh.dialogue, x86-mingw32-build.sh.conf: Ditto.

2009-02-18  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Relocate GDC support to experimental development branch; phase 1.

	* All files (gdc-experimental): Branch tag assigned at `HEAD'.

2008-01-13  Michael Gerdau  <mgdde@users.sourceforge.net>

	* x86-mingw32-build.sh: Add file type tag for emacs.
	* x86-mingw32-build.sh.batch, x86-mingw32-build.sh.conf: Ditto.
	* x86-mingw32-build.sh.detail, x86-mingw32-build.sh.dialogue: Ditto.
	* x86-mingw32-build.sh.function, x86-mingw32-build.sh.getopts: Ditto.
	* x86-mingw32-build.sh.help, x86-mingw32-build.sh.mirrors: Ditto.
	* x86-mingw32-build.sh.version: Ditto.

2008-01-13  Michael Gerdau  <mgdde@users.sourceforge.net>

	* x86-mingw32-build.sh (COMPONENT): Add support for GDC.
	* x86-mingw32-build.sh.dialogue (BUILD_COMPONENTS): Ditto.

	* x86-mingw32-build.sh.conf (W32API_VERSION): Update to 3.11
	(RUNTIME_VERSION): Update to 3.14
	(BINUTILS_VERSION): Update to 2.18.50-20080109
	(GDC_VERSION): New identifier; define it as 0.24

2006-12-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* x86-mingw32-build.sh.conf (W32API_VERSION): Update to 3.8
	(RUNTIME_VERSION): Update to 3.11-20061202-1

2006-11-07  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* .cvsignore, Makefile: New files.

2006-11-05  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* xscripts: New module; imported with...
	(MinGW): this vendor tag, and...
	(r0-0): this release tag.